nueva categoría: anime

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <option value="7">7</option>
             <option value="8">8</option>
         </select>
+        <label for="category">Categorías</label>
+        <select id="category" name="category">
+            <option value="videogames">Videojuegos</option>
+            <option value="animes">Animes</option>
+        </select>
 
         <button class="start" type="submit">Comenzar</button>
     </form>
