--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #1a1b1f;">
     <form class="settings" id="settingsForm">
-        <h1>Espía: Videojuegos</h1>
+        <h1>El Espía</h1>
 
         <label for="minutes">Duración</label>
         <input type="number" id="minutes" min="1" required>
