más categorías agregadas

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <select id="category" name="category">
             <option value="videogames">Videojuegos</option>
             <option value="animes">Animes</option>
+            <option value="movies">Películas</option>
+            <option value="football-players">Jugadores de Fútbol</option>
+            <option value="football-teams">Equipos de Fútbol</option>
         </select>
 
         <button class="start" type="submit">Comenzar</button>
